Fix: Reduce the size of the chat modal on mobile devices
Update position of bi download to the right in nav bar

--- a/src/assets/stylesheets/components/_chat.scss
+++ b/src/assets/stylesheets/components/_chat.scss
@@ -62,7 +62,7 @@
 .chat-modal {
   display: none;
   position: relative;
-  width: min(90vw, 400px);
+  width: min(85vw, 400px);
   height: 500px;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.97) 0%, rgba(245, 248, 255, 0.98) 100%);
   border: 1px solid rgba(18, 24, 40, 0.12);
@@ -311,5 +311,19 @@
   .chat-widget {
     bottom: 10px;
     right: -20px;
+  }
+  
+  .chat-modal {
+    width: min(80vw, 350px);
+    height: 450px;
+    margin-right: 35px;
+  }
+  
+  .chat-modal::before {
+    left: calc(50% + 125px);
+  }
+  
+  .chat-modal::after {
+    left: calc(50% + 125px);
   }
 }
